Changed the db to get rid of errors